objects/Predefined_Action_Item__c.object
<CustomObject>
    <fields>
        <fullName>Predefined_Implementation_Plan__c</fullName>
        <label>Predefined Implementation Plan</label>
        <referenceTo>Predefined_Implementation_Plan__c</referenceTo>
        <relationshipLabel>Predefined Action Items</relationshipLabel>
        <relationshipName>Predefined_Action_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_Number__c</fullName>
        <label>Step Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Predefined Action Item</label>
    <nameField>
        <displayFormat>Pre-AI-{0000}</displayFormat>
        <label>Predefined Action Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Predefined Action Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Limit_Action_Items_to_10000</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp;  Predefined_Implementation_Plan__r.Total_Action_Items__c = 10000</errorConditionFormula>
        <errorMessage>You cannot have more than 10,000 predefined action items in a predefined implementation plan.</errorMessage>
    </validationRules>
</CustomObject>